Rewrite SpeechBubble and Headerillustration to support different themes, add HeaderIllustration to step 5, remove step 6, remove placeholder stepindicator labels, fixed confirmCheckbox spacing on step 1

--- a/src/app/components/engangsstonad/engangsstonad.less
+++ b/src/app/components/engangsstonad/engangsstonad.less
@@ -23,4 +23,8 @@
 	.radioGroup {
 		margin: @marginSmall 0;
 	}
+
+	.confirmCheckbox {
+		margin-top: @marginLarge;
+	}
 }
