--- a/src/app/components/shared/confirmCheckbox/confirmCheckbox.less
+++ b/src/app/components/shared/confirmCheckbox/confirmCheckbox.less
@@ -5,6 +5,7 @@
 	border-radius: 0.5rem;
 	padding: 1rem;
 	display: flex;
+	margin: 0;
 
 	&.confirmCheckbox--checked {
 		background-color: #cde7d8;
